[metadata]
name = pytestplate
version = 0.1.0
author = Jeremy Smith
author_email = j.smith.03@cantab.net
description = Python test template generator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
setup_requries = setuptools
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pytestplate = pytestplate.pytestplate:cli
